--- a/guide/css/theme/blocks.css
+++ b/guide/css/theme/blocks.css
@@ -35,8 +35,8 @@
     color: #000 !important; }
   .group .block {
     margin: 20px;
-    height: 120px;
-    width: 100px;
+    min-height: 120px;
+    min-width: 100px;
     justify-content: center;
     font-size: 12px;
     text-align: center;
