--- a/guide/css/theme/blocks.scss
+++ b/guide/css/theme/blocks.scss
@@ -55,8 +55,8 @@
 
   & .block {
     margin: 20px;
-    height: 120px;
-    width: 100px;
+    min-height: 120px;
+    min-width: 100px;
     justify-content: center;
     font-size: 12px;
     text-align: center;
