--- a/guide/css/theme/main.css
+++ b/guide/css/theme/main.css
@@ -66,7 +66,7 @@ header .title {
   text-align: center; }
 
 .title_section {
-  margin: 0 0 30px 40px;
+  margin: 0 0 30px 0;
   font-size: 20px;
   font-weight: 300;
   color: #FFF;
@@ -135,8 +135,8 @@ header .title {
     color: #000 !important; }
   .group .block {
     margin: 20px;
-    height: 120px;
-    width: 100px;
+    min-height: 120px;
+    min-width: 100px;
     justify-content: center;
     font-size: 12px;
     text-align: center;
