--- a/guide/css/theme/title.css
+++ b/guide/css/theme/title.css
@@ -6,8 +6,7 @@
   font-size: 40px;
   font-weight: 200;
   color: #FFF;
-  text-align: center;
-}
+  text-align: center; }
 
 .title_section {
   margin: 0 0 30px 0;
@@ -15,5 +14,6 @@
   font-weight: 300;
   color: #FFF;
   background-color: #00bcd4;
-  padding: 10px 20px;
-}
+  padding: 10px 20px; }
+
+/*# sourceMappingURL=title.css.map */
