Guide de style : fix responsive (again)

--- a/guide/css/override/bootstrap-override.scss
+++ b/guide/css/override/bootstrap-override.scss
@@ -1,8 +1,8 @@
 // GENERAL :: Container
 
-.container {
-  max-width: 100%;
-}
+//.container {
+//  max-width: 100%;
+//}
 
 .no-gutters {
   margin-right: -15px;
